--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,10 @@
   <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/style/style.css">
   <link rel="stylesheet" href="assets/style/main.css">
   <title>burn-book</title>
@@ -33,11 +37,11 @@
   </header>
   <main id="" class="bg-img">
     <div class="container-fluid">
-      <div class="row text-center justify-content-center">
+      <div class="row text-center justify-content-center m-3">
 
-        <div class="col-md-4 px-4 py-4">
+        <div class="col-md-4 px-4 py-4 m-2">
           <div class="bg-white rounded shadow">
-            <div id="posts">
+            <div id="posts" class="m-2">
 
               <!-- <button type="button" class="btn btn-ouline-danger position-absolute top-0 " onclick="">
                 <span class="badge fs-5 text-dark pt-3">x</span>
